# tket2-dataflow

./: .gitignore  Cargo.toml  README.md  pyproject.toml
examples/adders/: add_132.hugr  add_16.hugr  add_264.hugr  add_32.hugr  add_4.hugr  add_64.hugr  add_8.hugr  addition.py
examples/amy_lunderville/: README.md  if_simple.hugr  if_simple.py  loop_block.hugr  loop_block.py  loop_cycle.hugr  loop_cycle.py  loop_h.hugr  loop_h.py  loop_nested.hugr  loop_nested.py  loop_nonlinear.hugr  loop_nonlinear.py  loop_null.hugr  loop_null.py  loop_simple.hugr  loop_simple.py  loop_swap.hugr  loop_swap.py  reset_simple.hugr  reset_simple.py  rus.hugr  rus.py
src/: bit_vector.rs  lib.rs  pauli_product.rs  stabilizer_dataflow.rs  tableau.rs
